<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="2dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginHorizontal="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/smart_air"
                    app:srcCompat="@drawable/transparentlog" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/smart_air"
                    android:textColor="@color/colour_blue"
                    android:textSize="40sp" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="13dp">

            <Button
                android:id="@+id/parent"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                style="@style/SmartAir.ToggleDefaultButton"
                android:text="@string/parent"/>

            <Button
                android:id="@+id/provider"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                style="@style/SmartAir.ToggleDefaultButton"
                android:text="@string/provider"/>

            <Button
                android:id="@+id/child"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                style="@style/SmartAir.ToggleDefaultButton"
                android:text="@string/child"/>
        </LinearLayout>


        <LinearLayout
                style="@style/TextFieldGroup"
                android:visibility="visible"
                android:id="@+id/emailLayout">

                <TextView
                    style="@style/TextFieldLabel"
                    android:text="@string/Email" />

                <EditText
                    android:id="@+id/registerEmail"
                    style="@style/RoundedTextField"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email_placeholder"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

        <LinearLayout
            style="@style/TextFieldGroup"
            android:visibility="gone"
            android:id="@+id/userLayout">

            <TextView
                style="@style/TextFieldLabel"
                android:text="@string/Username" />

            <EditText
                android:id="@+id/registerUsername"
                style="@style/RoundedTextField"
                android:hint="@string/username_placeholder"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            style="@style/TextFieldGroup"
            android:visibility="visible"
            android:id="@+id/passwordLayout">

            <TextView
                style="@style/TextFieldLabel"
                android:text="@string/Password" />

            <EditText
                android:id="@+id/registerPassword"
                style="@style/RoundedTextField"
                android:autofillHints="password"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/colour_indigo"
                android:fontFamily="@font/dm_sans_regular"
                android:text="*Must be minimum length 8 with 1 digit, 1 lower &amp; upper case, 1 special character [@#$%^&amp;+=!]" />

        </LinearLayout>

        <LinearLayout
            style="@style/TextFieldGroup"
            android:visibility="gone"
            android:id="@+id/accessLayout">

            <TextView
                style="@style/TextFieldLabel"
                android:text="@string/Access_code" />

            <EditText
                android:id="@+id/registerAccessCode"
                style="@style/RoundedTextField"
                android:inputType="text" />
        </LinearLayout>



        <Button
            android:id="@+id/signupButton"
            style="@style/SmartAir.Button1"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="170dp"
            android:layout_width="fill_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/signup" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="#c0c0c0"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/copyrightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colour_indigo"
            android:fontFamily="@font/dm_sans_bold"
            android:textAlignment="center"
            android:text="@string/app_name_copyright" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/signInStatement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/colour_indigo" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>